--- a/about.html
+++ b/about.html
@@ -76,69 +76,59 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>About Me</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.</p>
+            <h2>Sobre mim</h2>
+            <p class="mb-0">Se familiarize comigo nessa seção:</p>
           </div>
 
         </div>
 
         <div class="row">
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
-            <h3 class="h3 mb-4">Skills</h3>
+            <h3 class="h3 mb-4">Habilidades</h3>
             <ul class="list-unstyled">
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>WordPress</strong>
-                  <span class="ml-auto">80%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
                   <strong>Photoshop</strong>
-                  <span class="ml-auto">96%</span>
+                  <span class="ml-auto">88%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 96%" aria-valuenow="96" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>HTML5/CSS3</strong>
-                  <span class="ml-auto">99%</span>
+                  <span class="ml-auto">58%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width:58%" aria-valuenow="96" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Veu</strong>
-                  <span class="ml-auto">87%</span>
+                  <strong>Figma</strong>
+                  <span class="ml-auto">52%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 52%" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Angular</strong>
-                  <span class="ml-auto">85%</span>
+                  <strong>Pacote Office</strong>
+                  <span class="ml-auto">50%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>React</strong>
-                  <span class="ml-auto">88%</span>
+                  <strong>Edição de Vídeo</strong>
+                  <span class="ml-auto">70%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </li>
             </ul>
@@ -146,15 +136,11 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="assets/img/person_1_sq.jpg" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
-              molestias illo dolorem et, odio!</p>
-            <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
-              rem consequuntur, illum adipisci, sed obcaecati!</p>
-            <p>Ex, dolorem qui voluptas reprehenderit provident, ad ipsum iure a consequatur voluptatem incidunt nobis.
-              Vitae reiciendis quae ex.</p>
-            <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
-              nisi voluptatibus. Minus?</p>
-            <p><a href="#" class="readmore">Download my CV</a></p>
+            <p>Nasci em 2006, desde pequeno eu sempre tive contato com computadores e sempre soube que eu trabalharia com algo nessa área.</p>
+            <p>Conforme os anos se passaram, eu entrei no Ensino Médio, cursando Médio e Técnico simultâneamente, no período noturno, e, foi no Ensino Médio que eu descobri minha paixão por Design.</p>
+            <p>Algum tempo se passou, depois de eu entrar no ensino médio e, recentemente, descobri que minha paixão é mais nichada, pois, é o UI e UX, que seria Interface de Usuário e Experiência do Usuário, respectivamente.</p>
+            <p>Desse momento em diante, comecei a sempre aumentar meu conhecimento sobre essas duas áreas, sem parar, lendo livros, como: "O Design do Dia a Dia", "Psicologia das Cores", "Practical UI" etc.</p>
+            <p>Além de sempre buscar por qualquer tipo de conteúdos dessa vertente.</p>
           </div>
 
         </div>
