--- a/index.html
+++ b/index.html
@@ -95,7 +95,16 @@
                 <h3>Rota Dimensional</h3>
                 <span>Branding & Design</span>
               </div>
-              <img class="img-fluid" src="assets/img/rota_dimensional_profile.PNG">
+              <img class="img-fluid" src="assets/img/dimensional_profile.jpg">
+            </a>
+          </div>
+          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="tribala.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Publicidade Tribala</h3>
+                <span>Design</span>
+              </div>
+              <img class="img-fluid" src="assets/img/tribala_profile.jpg">
             </a>
           </div>
           
