--- a/tribala.html
+++ b/tribala.html
@@ -74,8 +74,9 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Rota Dimensional</h2>
-            <p>A Rota Dimensional foi uma marca que eu criei para um trabalho escolar, que era criar um Manual de Identiade Visual, portanto, também uma marca.</p>
+            <h2>Publicidade Tribala</h2>
+            <p>Foi um trabalho escolar, onde tivemos que tirar foto do produto (no caso, a Tribala) e fazer uma publicidade com essa foto tirada por nós mesmos.</p>
+            <p>Esse trabalho foi realizado em dupla com minha amiga, Giulia Denardi</p>
           </div>
         </div>
       </div>
@@ -84,27 +85,27 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="assets/img/dimensional_profile_big.jpg" alt="Image" class="img-fluid">
+              <img src="assets/img/tribala_profile_big.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">Rota Dimensional</h3>
-                <p class="mb-4"><span class="text-muted">Branding</span></p>
+                <h3 class="h3">Tribala</h3>
+                <p class="mb-4"><span class="text-muted">Design</span></p>
 
                 <div class="mb-5">
-                  <p>Manual de Identidade Visual</p>
+                  <p>Publicidade</p>
 
                 </div>
 
                 <h4 class="h4 mb-3">O que foi feito:</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Naming</li>
-                  <li>Logo</li>
-                  <li>Manual de Identidade Visual</li>
-                  <li>Redes Sociais</li>
+                  <li>Fotografia</li>
+                  <li>Edição de Imagens</li>
+                  <li>Perspectiva</li>
+                  <li>Montagem</li>
                 </ul>
 
-                <p><a href="https://drive.google.com/file/d/1RwoX-CplM60MBUG1Sd4yZzsQAnfIxf59/view" target="_blank" class="readmore">Ver completo</a></p>
+                <p><a href="https://drive.google.com/file/d/1P6z-ZyJ8BdzPRMBTwHtEe8cg59oyr8xK/view?usp=sharing" target="_blank" class="readmore">Ver o arquivo PSD</a></p>
               </div>
             </div>
           </div>
