--- a/contact.html
+++ b/contact.html
@@ -76,65 +76,28 @@
 
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Contact</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.
+            <h2>Contato</h2>
+            <p class="mb-0">Me envie uma mensagem! Estou disposto a te responder o mais rápido possível!
             </p>
           </div>
 
         </div>
 
         <div class="row">
-          <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-
-              <div class="row gy-3">
-                <div class="col-md-6 form-group">
-                  <label for="name">Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="col-md-6 form-group">
-                  <label for="name">Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-                <div class="col-md-12 form-group">
-                  <label for="name">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject" required>
-                </div>
-                <div class="col-md-12 form-group">
-                  <label for="name">Message</label>
-                  <textarea class="form-control" name="message" cols="30" rows="10" required></textarea>
-                </div>
-
-                <div class="col-md-12 my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-
-                <div class="col-md-6 mt-0 form-group">
-                  <input type="submit" class="readmore d-block w-100" value="Send Message">
-                </div>
-              </div>
-
-            </form>
-
-          </div>
 
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
             <ul class="list-unstyled">
               <li class="mb-3">
-                <strong class="d-block mb-1">Address</strong>
-                <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+                <strong class="d-block mb-1">Endereço</strong>
+                <span>Rua Recife, 264, JD São Jorge, Nova Odessa</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
-                <span>+1 232 3235 324</span>
+                <a class="zap" href="https://wa.me/+19994073204"><span>19 99407-3204</span></a>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
-                <span>youremail@domain.com</span>
+                <span>andreyolivattogarcia@gmail.com</span>
               </li>
             </ul>
           </div>
@@ -152,7 +115,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright Andrey Olivatto Garcia. All Rights Reserved</p>
           <div class="credits">
             <!--
             All the links in the footer should remain intact.
@@ -164,10 +127,7 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="#"><span class="bi bi-twitter"></span></a>
-          <a href="#"><span class="bi bi-facebook"></span></a>
-          <a href="#"><span class="bi bi-instagram"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
+          <a href="https://br.linkedin.com/in/andrey-olivatto-garcia"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
