--- a/services.html
+++ b/services.html
@@ -76,9 +76,8 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>My Services</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-              explicabo inventore.</p>
+            <h2>O que eu ofereço?</h2>
+            <p>Posso realizar tudo isso abaixo para te ajudar com seus sonhos!</p>
 
           </div>
 
@@ -92,50 +91,31 @@
 
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <i class="bi bi-card-checklist"></i>
-              <h4 class="h4 mb-2">Web Design</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+              <h4 class="h4 mb-2">UI Design</h4>
+              <p>Crio interfaces visualmente atraentes, intuitivas e fáceis de usar, alén de que sempre busco por mais conhecimentos sobre interface do usuário!</p>
               <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
+
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-binoculars"></i>
-              <h4 class="h4 mb-2">Mobile Applications</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+              <h4 class="h4 mb-2">Design Gráfico</h4>
+              <p>Busco sempre entregar resultados visualmente impactantes e eficazes! Estou aqui para transformar conceitos em designs cativantes e memoráveis!</p>
               <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <i class="bi bi-brightness-high"></i>
-              <h4 class="h4 mb-2">Graphic Design</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+              <h4 class="h4 mb-2">UX Design</h4>
+              <p>Meu objetivo é entender as necessidades e comportamentos dos usuários para projetar interfaces que sejam não apenas funcionais, mas também agradáveis e eficientes de usar!</p>
               <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-calendar4-week"></i>
-              <h4 class="h4 mb-2">SEO</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+              <h4 class="h4 mb-2">Edição de Vídeo</h4>
+              <p>Estou comprometido em transformar ideias em vídeos que deixem uma marca duradoura</p>
               <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
               </ul>
             </div>
           </div>
@@ -143,45 +123,7 @@
       </div>
     </section>
 
-    <!-- ======= Testimonials Section ======= -->
-    <section class="section pt-0">
-      <div class="container">
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Jean Hicks</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Chris Stanworth</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
+ 
 
   </main><!-- End #main -->
 
