--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">Web</a>
+              <a href="#" data-filter=".web">Escola</a>
               <a href="#" data-filter=".design">Design</a>
               <a href="#" data-filter=".branding">Branding</a>
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item branding web design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="rota_dimensional.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Rota Dimensional</h3>
@@ -98,7 +98,7 @@
               <img class="img-fluid" src="assets/img/dimensional_profile.jpg">
             </a>
           </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item design web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="tribala.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Publicidade Tribala</h3>
@@ -107,6 +107,16 @@
               <img class="img-fluid" src="assets/img/tribala_profile.jpg">
             </a>
           </div>
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <div class="item branding web design col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="escolares.html" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Trabalhos Escolares</h3>
+                  <span>Branding & Design</span>
+                </div>
+                <img class="img-fluid" src="assets/img/portfolio_profile2.jpg">
+              </a>
+            </div>
           
         </div>
       </div>
